--- a/mypy.ini
+++ b/mypy.ini
@@ -10,4 +10,11 @@ ignore_missing_imports = True
 follow_imports = skip
 
 # Reduce noise for generated or version-specific ignores.
-warn_unused_ignores = False
+warn_unused_ignores = True
+
+# Gradually tighten type checking without breaking untyped code.
+warn_redundant_casts = True
+warn_return_any = True
+warn_unused_configs = True
+no_implicit_optional = True
+check_untyped_defs = True
