--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - 'docker/atlas/**'
       - 'docker/**'
+      - 'tests/**'
       - '.github/workflows/**'
       - '.pre-commit-config.yaml'
       - '.hadolint.yaml'
@@ -21,6 +22,7 @@ on:
     paths:
       - 'docker/atlas/**'
       - 'docker/**'
+      - 'tests/**'
       - '.github/workflows/**'
       - '.pre-commit-config.yaml'
       - '.hadolint.yaml'
