docs: document build args and image name usage

--- a/docker/atlas/.env.example
+++ b/docker/atlas/.env.example
@@ -10,6 +10,11 @@ ENABLE_MATERIALS=0     # 1=enable materials science / 启用材料科学
 IMAGE_NAME=atlas       # Docker image name / Docker 镜像名
 ATLAS_IMAGE=atlas:v0.6-base  # Full image tag / 完整镜像标签
 NO_CACHE=0             # 1=rebuild without cache / 禁用缓存重建
+BASE_IMAGE=pytorch/pytorch:2.10.0-cuda13.0-cudnn9-devel  # Build base image / 构建基础镜像
+SMOKE_BASE_IMAGE=python:3.10-slim  # Smoke stage base image / 轻量校验基础镜像
+USERNAME=atlas         # Non-root user name / 非 root 用户名
+USER_UID=1000          # Non-root user UID / 非 root 用户 UID
+USER_GID=1000          # Non-root user GID / 非 root 用户 GID
 
 # Runtime Options / 运行选项
 GPU_DEVICE=all         # all, 0, 1, 0,1 etc.
