--- a/docker/atlas/.env.example
+++ b/docker/atlas/.env.example
@@ -15,6 +15,7 @@ SMOKE_BASE_IMAGE=python:3.10-slim  # Smoke stage base image / 轻量校验基础
 USERNAME=atlas         # Non-root user name / 非 root 用户名
 USER_UID=1000          # Non-root user UID / 非 root 用户 UID
 USER_GID=1000          # Non-root user GID / 非 root 用户 GID
+USE_HASHED_REQUIREMENTS=0 # 1=use requirements*.lock with hashes / 使用哈希锁文件
 
 # Runtime Options / 运行选项
 GPU_DEVICE=all         # all, 0, 1, 0,1 etc.
