--- a/docker/atlas/requirements.txt
+++ b/docker/atlas/requirements.txt
@@ -20,7 +20,7 @@ seaborn==0.13.2
 # ===== Development Tools / 开发工具 =====
 ipython==9.10.0
 jupyterlab==4.5.3
-ipykernel>=7.0.0
+ipykernel==7.2.0
 tqdm==4.67.3
 
 # ===== Utilities / 实用工具 =====
